added marking task as completed , cosmetic swagger changes
