# taskApi/docs/swagger.yaml
@@ -46,7 +46,7 @@ paths:
       - application/json
       description: Create a new task and send it to the queue
       parameters:
-      - description: Create Task
+      - description: Task name
         in: body
         name: task
         required: true
@@ -62,11 +62,11 @@ paths:
       summary: Create a new task
       tags:
       - tasks
-  /task/delete:
+  /task/delete/{id}:
     delete:
       description: Delete existing task
       parameters:
-      - description: Delete Task
+      - description: Task ID
         in: path
         name: id
         required: true
@@ -77,13 +77,18 @@ paths:
       summary: Delete task
       tags:
       - tasks
-  /task/update:
+  /task/update/{id}:
     put:
       description: Change status of existing task
       parameters:
-      - description: Update Task
+      - description: Task ID
         in: path
         name: id
+        required: true
+        type: string
+      - description: Complete task
+        in: query
+        name: complete
         required: true
         type: string
       produces:
